Add Brad as a maintainer
Signed-off-by: Joe Friedrichsen <114173023+jfriedri-ni@users.noreply.github.com>

--- a/packages/ni.protobuf.types/pyproject.toml
+++ b/packages/ni.protobuf.types/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 license = "MIT"
 description = "Stubs for the gRPC definitions in ni-apis"
 authors = ["NI <opensource@ni.com>"]
-maintainers = ["Joe Friedrichsen <joe.friedrichsen@emerson.com>"]
+maintainers = [
+  "Brad Keryan <brad.keryan@emerson.com>",
+  "Joe Friedrichsen <joe.friedrichsen@emerson.com>",
+]
 readme = "README.md"
 repository = "https://github.com/ni/ni-apis-python"
 keywords = ["ni-apis", "protobuf"]
