--- a/packages/ni.protobuf.types/pyproject.toml
+++ b/packages/ni.protobuf.types/pyproject.toml
@@ -2,7 +2,7 @@
 name = "ni.protobuf.types"
 version = "0.1.0"
 license = "MIT"
-description = "Stubs for the gRPC definitions in ni-apis"
+description = "Stubs for the ni.protobuf.types gRPC definitions in ni-apis"
 authors = ["NI <opensource@ni.com>"]
 maintainers = [
   "Brad Keryan <brad.keryan@emerson.com>",
