--- a/tools/grpc_generator/pyproject.toml
+++ b/tools/grpc_generator/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "grpc_generator", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+click = "^8.2.1"
 
 [tool.poetry.group.lint.dependencies]
 bandit = { version = ">=1.7", extras = ["toml"] }
