--- a/packages/ni.protobuf.types/pyproject.toml
+++ b/packages/ni.protobuf.types/pyproject.toml
@@ -56,7 +56,7 @@ sphinx-autoapi = ">=1.8.4"
 m2r2 = ">=0.3.2"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.8"]
 build-backend = "poetry.core.masonry.api"
 
 
