--- a/tools/grpc_generator/pyproject.toml
+++ b/tools/grpc_generator/pyproject.toml
@@ -27,7 +27,7 @@ pytest-doctestplus = ">=1.4"
 pytest-mock = ">=3.0"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>-1.8"]
 build-backend = "poetry.core.masonry.api"
 
 
