Use a namespaced name for the package
Signed-off-by: Joe Friedrichsen <114173023+jfriedri-ni@users.noreply.github.com>

--- a/tools/grpc_generator/pyproject.toml
+++ b/tools/grpc_generator/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "grpc-generator"
+name = "ni-apis-grpc-generator"
 version = "0.1.0"
 license = "MIT"
 description = "Python generator for NI gRPC APIs"
