--- a/tools/grpc_generator/pyproject.toml
+++ b/tools/grpc_generator/pyproject.toml
@@ -20,6 +20,7 @@ grpcio-tools = [
   { version = "1.59.0", python = ">=3.12,<3.13" },
   { version = "1.67.0", python = "^3.13" },
 ]
+mypy-protobuf = ">=3.6"
 
 [tool.poetry.group.lint.dependencies]
 bandit = { version = ">=1.7", extras = ["toml"] }
