Try shortening the path passed to bandit to see if we can combine check yml files.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/.github/workflows/check_ni_pythonpanel_v1.yml
+++ b/.github/workflows/check_ni_pythonpanel_v1.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Mypy static analysis (Windows)
         run:  poetry run mypy --platform win32
       - name: Bandit security checks
-        run:  poetry run bandit -c pyproject.toml -r src/ni/pythonpanel/v1
+        run:  poetry run bandit -c pyproject.toml -r src/ni
       - name: Add virtualenv to the path for pyright-action
         run: echo "$(poetry env info --path)/bin" >> $GITHUB_PATH
       - name: Pyright static analysis (Linux)
