Combine check_*.yml into a single check_package.yml file with an input.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,11 @@ on:
 jobs:
   check_ni_protobuf_types:
     name: Check ni.protobuf.types
-    uses: ./.github/workflows/check_ni_protobuf_types.yml
+    uses: ./.github/workflows/check_package.yml
+    with:
+      package_name: ni.protobuf.types
   check_ni_pythonpanel_v1_proto:
     name: Check ni.pythonpanel.v1.proto
-    uses: ./.github/workflows/check_ni_pythonpanel_v1.yml
+    uses: ./.github/workflows/check_package.yml
+    with:
+      package_name: ni.pythonpanel.v1.proto
