--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -1,17 +1,23 @@
-name: Check ni.pythonpanel.v1.proto
+name: Check Package
 
 on:
   workflow_call:
+    inputs:
+      package_name:
+        description: 'The name of the package to check.'
+        default: ''
+        required: true
+        type: string
   workflow_dispatch:
 
 jobs:
   check_package:
-    name: Check ni.pythonpanel.v1.proto
+    name: Check ${{ inputs.package_name }}
     runs-on: ubuntu-latest
     defaults:
       run:
         # Set the working-directory for all steps in this job.
-        working-directory: ./packages/ni.pythonpanel.v1.proto
+        working-directory: ./packages/${{ inputs.package_name }}
     steps:
       - name: Check out repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -25,9 +31,9 @@ jobs:
       - name: Cache virtualenv
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         with:
-          path: .venv
-          key: ni.pythonpanel.v1.proto-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('poetry.lock') }}
-      - name: Install ni.pythonpanel.v1.proto
+          path: packages/${{ inputs.package_name }}/.venv
+          key: ${{ inputs.package_name }}-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('packages/${{ inputs.package_name }}/poetry.lock') }}
+      - name: Install ${{ inputs.package_name }}
         run: poetry install -v
       - name: Lint
         run: poetry run ni-python-styleguide lint
@@ -36,7 +42,7 @@ jobs:
       - name: Mypy static analysis (Windows)
         run:  poetry run mypy --platform win32
       - name: Bandit security checks
-        run:  poetry run bandit -c pyproject.toml -r src/ni
+        run:  poetry run bandit -c pyproject.toml -r src/
       - name: Add virtualenv to the path for pyright-action
         run: echo "$(poetry env info --path)/bin" >> $GITHUB_PATH
       - name: Pyright static analysis (Linux)
@@ -44,10 +50,10 @@ jobs:
         with:
           python-platform: Linux
           version: PATH
-          working-directory: ./packages/ni.pythonpanel.v1.proto
+          working-directory: ./packages/${{ inputs.package_name }}
       - name: Pyright static analysis (Windows)
         uses: jakebailey/pyright-action@b5d50e5cde6547546a5c4ac92e416a8c2c1a1dfe # v2.3.2
         with:
           python-platform: Windows
           version: PATH
-          working-directory: ./packages/ni.pythonpanel.v1.proto
+          working-directory: ./packages/${{ inputs.package_name }}
