--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Check out repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          submodules: true
       - name: Set up Python
         uses: ni/python-actions/setup-python@a3bfe1baa6062fd6157683651d653d527967d4d4 # v0.3.1
         id: setup-python
@@ -40,7 +42,7 @@ jobs:
       - name: Upload ni.protobuf.types test results
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
-          name: test_results_unit_ni_protobuf_types${{ matrix.os }}_py${{ matrix.python-version }}
+          name: test_results_unit_ni_protobuf_types_${{ matrix.os }}_py${{ matrix.python-version }}
           path: ./packages/ni.protobuf.types/test_results/*.xml
         if: always()
       # ni.pythonpanel.v1.proto
@@ -58,6 +60,6 @@ jobs:
       - name: Upload ni.pythonpanel.v1.proto test results
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
-          name: test_results_unit_ni_pythonpanel_v1_proto${{ matrix.os }}_py${{ matrix.python-version }}
+          name: test_results_unit_ni_pythonpanel_v1_proto_${{ matrix.os }}_py${{ matrix.python-version }}
           path: ./packages/ni.pythonpanel.v1.proto/test_results/*.xml
         if: always()
