--- a/.github/actions/run_and_upload_unit_tests/action.yml
+++ b/.github/actions/run_and_upload_unit_tests/action.yml
@@ -15,9 +15,11 @@ runs:
     - name: Install ${{ inputs.package-name }}
       run: poetry install -v
       working-directory: ./packages/${{ inputs.package-name }}
+      shell: bash
     - name: Run ${{ inputs.package-name }} unit tests and code coverage
       run: poetry run pytest ./tests/unit -v --cov=${{ inputs.package-name }} --junitxml=test_results/${{ inputs.package-name }}-${{ matrix.os }}-py${{ matrix.python-version }}.xml
       working-directory: ./packages/${{ inputs.package-name }}
+      shell: bash
     - name: Upload ${{ inputs.package-name }} test results
       uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
       with:
