--- a/tools/grpc_generator/pyproject.toml
+++ b/tools/grpc_generator/pyproject.toml
@@ -13,6 +13,14 @@ grpc-generator = "grpc_generator.__main__:cli"
 [tool.poetry.dependencies]
 python = "^3.11"
 click = "^8.2.1"
+# When updating the grpcio-tools version, also update the minimum grpcio version
+# and regenerate gRPC stubs.
+grpcio-tools = [
+  { version = "1.49.1", python = ">=3.9,<3.12" },
+  { version = "1.59.0", python = ">=3.12,<3.13" },
+  { version = "1.67.0", python = "^3.13" },
+]
+mypy-protobuf = ">=3.6"
 
 [tool.poetry.group.lint.dependencies]
 bandit = { version = ">=1.7", extras = ["toml"] }
