Try to change mypy setting to resolve error.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/packages/ni.protobuf.types/pyproject.toml
+++ b/packages/ni.protobuf.types/pyproject.toml
@@ -73,6 +73,7 @@ line-length = 100
 files = "src/,tests/"
 namespace_packages = true
 strict = true
+explicit_package_bases = true
 
 [tool.pyright]
 include = ["tests/"]
