--- a/packages/ni.protobuf.types/pyproject.toml
+++ b/packages/ni.protobuf.types/pyproject.toml
@@ -71,10 +71,10 @@ skips = [
 ]
 
 [tool.ni-python-styleguide]
-extend_exclude = "src/ni/protobuf/types"
+extend_exclude = "*_pb2_grpc.py,*_pb2_grpc.pyi,*_pb2.py,*_pb2.pyi"
 
 [tool.black]
-extend-exclude = 'src/ni/protobuf/types/'
+extend-exclude = '_pb2(_grpc)?\.(py|pyi)$'
 line-length = 100
 
 [tool.mypy]
@@ -86,7 +86,7 @@ explicit_package_bases = true
 
 [tool.pyright]
 include = ["src/", "tests/"]
-exclude = ["src/ni/protobuf/types/"]
+exclude = ["**/*_pb2_grpc.py", "**/*_pb2_grpc.pyi", "**/*_pb2.py", "**/*_pb2.pyi"]
 
 [tool.pytest.ini_options]
 addopts = "--doctest-modules --doctest-plus --strict-markers"
