--- a/packages/ni.protobuf.types/pyproject.toml
+++ b/packages/ni.protobuf.types/pyproject.toml
@@ -32,6 +32,11 @@ packages = [{include = "ni", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+protobuf = {version=">=4.21"}
+
+[tool.poetry.group.dev.dependencies]
+types-grpcio = ">=1.0"
+types-protobuf = ">=4.21"
 
 [tool.poetry.group.lint.dependencies]
 bandit = { version = ">=1.7", extras = ["toml"] }
@@ -65,16 +70,23 @@ skips = [
   "B101", # assert_used
 ]
 
+[tool.ni-python-styleguide]
+extend_exclude = "*_pb2_grpc.py,*_pb2_grpc.pyi,*_pb2.py,*_pb2.pyi"
+
 [tool.black]
+extend-exclude = '_pb2(_grpc)?\.(py|pyi)$'
 line-length = 100
 
 [tool.mypy]
-files = "src/,tests/"
+mypy_path = "src"
+files = "."
 namespace_packages = true
 strict = true
+explicit_package_bases = true
 
 [tool.pyright]
 include = ["src/", "tests/"]
+exclude = ["**/*_pb2_grpc.py", "**/*_pb2_grpc.pyi", "**/*_pb2.py", "**/*_pb2.pyi"]
 
 [tool.pytest.ini_options]
 addopts = "--doctest-modules --doctest-plus --strict-markers"
