--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,6 +19,14 @@ jobs:
     uses: ./.github/workflows/check_package.yml
     with:
       package-name: ni.pythonpanel.v1.proto
+  check_codegen_ni_protobuf_types:
+    name: Check codegen up-to-date for ni.pythonpanel.v1.proto
+    uses: ./.github/workflows/check_codegen_up_to_date.yml
+    with:
+      proto-basepath: ../../third_party/ni-apis
+      proto-subpath: ni/protobuf/types
+      output-basepath: ../../packages/ni.protobuf.types/src
+      output-format: submodule
   run_unit_tests:
     name: Run unit tests
     uses: ./.github/workflows/run_unit_tests.yml
