Add git clean flags back in.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/.github/workflows/check_codegen_up_to_date.yml
+++ b/.github/workflows/check_codegen_up_to_date.yml
@@ -60,5 +60,5 @@ jobs:
         run:  git diff --exit-code
       - name: Revert gRPC stubs
         run: |
-          git clean ${{ inputs.output-basepath }}
+          git clean -dfx ${{ inputs.output-basepath }}
           git restore ${{ inputs.output-basepath }}
