--- a/.github/workflows/check_codegen_up_to_date.yml
+++ b/.github/workflows/check_codegen_up_to_date.yml
@@ -57,7 +57,8 @@ jobs:
           find ${{ inputs.output-basepath }} -name \*_pb2.py\* -o -name \*_pb2_grpc.py\* -delete
           poetry run grpc-generator --proto-basepath ${{ inputs.proto-basepath }} --proto-subpath ${{ inputs.proto-subpath }} --output-basepath ${{ inputs.output-basepath }} --output-format ${{ inputs.output-format }}
       - name: Check for out-of-date gRPC stubs
-        run:  git diff --exit-code ${{ inputs.output-basepath }}
+        run: git diff --exit-code
+        working-directory: ${GITHUB_WORKSPACE}
       - name: Revert gRPC stubs
         run: |
           git clean -dfx ${{ inputs.output-basepath }}
