Try manually changing one of the codegen files to see if diff is failing because the latest change just added files.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/.github/workflows/check_codegen_up_to_date.yml
+++ b/.github/workflows/check_codegen_up_to_date.yml
@@ -62,3 +62,4 @@ jobs:
         run: |
           git clean -dfx ${{ inputs.output-basepath }}
           git restore ${{ inputs.output-basepath }}
+        working-directory: ./tools/grpc_generator
