--- a/.github/workflows/check_codegen_up_to_date.yml
+++ b/.github/workflows/check_codegen_up_to_date.yml
@@ -29,6 +29,10 @@ jobs:
   check_codegen:
     name: Check codegen up-to-date
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        # Set the working-directory for all steps in this job.
+        working-directory: ./tools/grpc_generator
     steps:
       - name: Check out repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -41,7 +45,6 @@ jobs:
         uses: ni/python-actions/setup-poetry@5286c12d65d90b2ea738bd57d452dc4366497581 # v0.4.1
       - name: Check for lock changes
         run: poetry check --lock
-        working-directory: ./tools/grpc_generator
       - name: Cache virtualenv
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         with:
@@ -49,12 +52,10 @@ jobs:
           key: grpc_generator-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('tools/grpc_generator/poetry.lock') }}
       - name: Install grpc_generator
         run: poetry install -v
-        working-directory: ./tools/grpc_generator
       - name: Generate gRPC stubs
         run: |
           find ${{ inputs.output-basepath }} -name \*_pb2.py\* -o -name \*_pb2_grpc.py\* -delete
           poetry run grpc-generator --proto-basepath ${{ inputs.proto-basepath }} --proto-subpath ${{ inputs.proto-subpath }} --output-basepath ${{ inputs.output-basepath }} --output-format ${{ inputs.output-format }}
-        working-directory: ./tools/grpc_generator
       - name: Check for out-of-date gRPC stubs
         run: git diff --exit-code
         working-directory: '.'
@@ -62,4 +63,3 @@ jobs:
         run: |
           git clean -dfx ${{ inputs.output-basepath }}
           git restore ${{ inputs.output-basepath }}
-        working-directory: ./tools/grpc_generator
