--- a/.github/workflows/check_codegen.yml
+++ b/.github/workflows/check_codegen.yml
@@ -1,11 +1,11 @@
-name: Check Package
+name: Check codegen up to date
 
 on:
   workflow_call:
     inputs:
       proto-basepath:
         description: 'The base path for proto files used for generation.'
-        default: ''
+        default: '../../third_party/ni-apis'
         required: true
         type: string
       proto-subpath:
@@ -23,7 +23,6 @@ on:
         default: ''
         required: true
         type: string
-  workflow_dispatch:
 
 jobs:
   check_codegen:
@@ -49,12 +48,11 @@ jobs:
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         with:
           path: tools/grpc_generator/.venv
-          key: grpc_generator-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('tools/grpc_generator/poetry.lock') }}
+          key: grpc_generator-only-main-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('tools/grpc_generator/poetry.lock') }}
       - name: Install grpc_generator
-        run: poetry install -v
+        run: poetry install -v --only main
       - name: Generate gRPC stubs
         run: |
-          find ${{ inputs.output-basepath }} -name \*_pb2.py\* -o -name \*_pb2_grpc.py\* -delete
           poetry run grpc-generator --proto-basepath ${{ inputs.proto-basepath }} --proto-subpath ${{ inputs.proto-subpath }} --output-basepath ${{ inputs.output-basepath }} --output-format ${{ inputs.output-format }}
       - name: Check for out-of-date gRPC stubs
         run: |
