--- a/packages/ni.protobuf.types/pyproject.toml
+++ b/packages/ni.protobuf.types/pyproject.toml
@@ -33,6 +33,7 @@ packages = [{include = "ni", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 protobuf = {version=">=4.21"}
+nitypes = {version=">=0.1.0dev3", allow-prereleases=true}
 
 [tool.poetry.group.dev.dependencies]
 types-grpcio = ">=1.0"
@@ -49,6 +50,8 @@ pytest = ">=7.2"
 pytest-cov = ">=4.0"
 pytest-doctestplus = ">=1.4"
 pytest-mock = ">=3.0"
+# Use a prerelease version of hightime for testing.
+hightime = { version = ">=0.3.0.dev0", allow-prereleases = true }
 
 [tool.poetry.group.docs]
 optional = true
