Token change to get this PR to re-merge.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/.github/workflows/check_codegen.yml
+++ b/.github/workflows/check_codegen.yml
@@ -25,7 +25,7 @@ on:
 
 jobs:
   check_codegen:
-    name: Check codegen up-to-date
+    name: Check codegen up to date
     runs-on: ubuntu-latest
     defaults:
       run:
