Add a workflow that checks that codegen is up-to-date. (#16)
* Add a workflow that checks that codegen is up-to-date.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Add git clean flags back in.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Used the wrong package name in the job title.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Fix comment.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Update the working directory for the git diff call so it actually sees diffs.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Try setting to ./ to get it to use the root dir.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Add a path argument to the diff command instead of using working-directory.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Try using the github_workspace env variable for the working-directory.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Maybe . will do it.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Remove default working directory and explicitly specify it where needed.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Try manually changing one of the codegen files to see if diff is failing because the latest change just added files.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Revert change to generated file.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Go back to using default run dir. Make a generated file change to make sure the diff still works.

* Try and handle untracked files by doing a git add and diffing staged.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Fix the working directory.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Revert codegened file change.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Get rid of cleanup step since each job runs in a separate docker container.

Signed-off-by: Michael Johansen <michael.j

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,9 +9,17 @@ on:
   workflow_dispatch:
 
 jobs:
+  check_codegen_ni_protobuf_types:
+    name: Check codegen up-to-date for ni.protobuf.types
+    uses: ./.github/workflows/check_codegen.yml
+    with:
+      proto-subpath: ni/protobuf/types
+      output-basepath: ../../packages/ni.protobuf.types/src
+      output-format: submodule
   check_ni_protobuf_types:
     name: Check ni.protobuf.types
     uses: ./.github/workflows/check_package.yml
+    needs: [check_codegen_ni_protobuf_types]
     with:
       package-name: ni.protobuf.types
   check_ni_pythonpanel_v1_proto:
