Add a workflow step to run the grpc_generator unit tests.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/.github/actions/run_and_upload_unit_tests/action.yml
+++ b/.github/actions/run_and_upload_unit_tests/action.yml
@@ -4,25 +4,29 @@ inputs:
   package-name:
     description: 'The name of the package to run tests for.'
     required: true
+  package-basepath:
+    description: 'Relative path to the parent directory of the package.'
+    required: true
+    default: 'packages'
 runs:
   using: "composite"
   steps:
     - name: Cache ${{ inputs.package-name }} virtualenv
       uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
       with:
-        path: ./packages/${{ inputs.package-name }}/.venv
-        key: ${{ inputs.package-name }}-${{ runner.os }}-py${{ env.pythonVersion }}-${{ hashFiles(format('packages/{0}/poetry.lock', inputs.package-name)) }}
+        path: ./${{ inputs.package-basepath }}/${{ inputs.package-name }}/.venv
+        key: ${{ inputs.package-name }}-${{ runner.os }}-py${{ env.pythonVersion }}-${{ hashFiles(format('{0}/{1}/poetry.lock', inputs.package-basepath, inputs.package-name)) }}
     - name: Install ${{ inputs.package-name }}
       run: poetry install -v
-      working-directory: ./packages/${{ inputs.package-name }}
+      working-directory: ./${{ inputs.package-basepath }}/${{ inputs.package-name }}
       shell: bash
     - name: Run ${{ inputs.package-name }} unit tests and code coverage
       run: poetry run pytest ./tests/unit -v --cov=${{ inputs.package-name }} --junitxml=test_results/${{ inputs.package-name }}-${{ matrix.os }}-py${{ matrix.python-version }}.xml
-      working-directory: ./packages/${{ inputs.package-name }}
+      working-directory: ./${{ inputs.package-basepath }}/${{ inputs.package-name }}
       shell: bash
     - name: Upload ${{ inputs.package-name }} test results
       uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
       with:
         name: test_results_unit_${{ inputs.package-name }}_${{ matrix.os }}_py${{ matrix.python-version }}
-        path: ./packages/${{ inputs.package-name }}/test_results/*.xml
+        path: ./${{ inputs.package-basepath }}/${{ inputs.package-name }}/test_results/*.xml
       if: always()
