Try switching back to 'greater than'.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           package-name: ni.pythonpanel.v1.proto
       - name: Run and upload unit tests - grpc_generator
-        if: matrix.python-version == '3.11'
+        if: matrix.python-version >= '3.11'
         uses: ./.github/actions/run_and_upload_unit_tests
         with:
           package-name: grpc_generator
