Address review feedback. Try a new if statement.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/.github/actions/run_and_upload_unit_tests/action.yml
+++ b/.github/actions/run_and_upload_unit_tests/action.yml
@@ -6,7 +6,7 @@ inputs:
     required: true
   package-basepath:
     description: 'Relative path to the parent directory of the package.'
-    required: true
+    required: false
     default: 'packages'
 runs:
   using: "composite"
