Add a workflow step to run the grpc_generator unit tests. (#25)
* Add a workflow step to run the grpc_generator unit tests.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Move grpc_generator tests into a 'unit' subfolder to work with workflows.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Only run grpc_generator tests on python >= 3.11.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Treat the version as a string when comparing.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Try not using the ${{ }} dereference. Also just try a simple equals.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Try switching back to 'greater than'.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Use fromJSON to convert the version to a number for easier comparision.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Just go back to == 3.11. Testing against the oldest supported version is sufficient.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Fix broken syntax.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

* Address review feedback. Try a new if statement.

Signed-off-by: Michael Johansen <michael.johansen@ni.com>

---------

Signed-off-by: Michael Johansen <michael.johansen@ni.com>
Co-authored-by: Michael Johansen <michael.johansen@ni.com>

--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -35,3 +35,10 @@ jobs:
         uses: ./.github/actions/run_and_upload_unit_tests
         with:
           package-name: ni.pythonpanel.v1.proto
+      # Run grpc_generator unit tests on its oldest supported version.
+      - name: Run and upload unit tests - grpc_generator
+        if: ${{ !contains(fromJSON('["3.9", "3.10"]'), matrix.python-version) }}
+        uses: ./.github/actions/run_and_upload_unit_tests
+        with:
+          package-name: grpc_generator
+          package-basepath: tools
