Exclude the docs folder for some linting operations.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/packages/ni.protobuf.types/pyproject.toml
+++ b/packages/ni.protobuf.types/pyproject.toml
@@ -74,10 +74,10 @@ skips = [
 ]
 
 [tool.ni-python-styleguide]
-extend_exclude = "*_pb2_grpc.py,*_pb2_grpc.pyi,*_pb2.py,*_pb2.pyi"
+extend_exclude = "docs,*_pb2_grpc.py,*_pb2_grpc.pyi,*_pb2.py,*_pb2.pyi"
 
 [tool.black]
-extend-exclude = '_pb2(_grpc)?\.(py|pyi)$'
+extend-exclude = 'docs/|_pb2(_grpc)?\.(py|pyi)$'
 line-length = 100
 
 [tool.mypy]
@@ -86,6 +86,7 @@ files = "."
 namespace_packages = true
 strict = true
 explicit_package_bases = true
+exclude = ["docs"]
 
 [tool.pyright]
 include = ["src/", "tests/"]
