--- a/packages/ni.panels.v1.proto/pyproject.toml
+++ b/packages/ni.panels.v1.proto/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "ni.pythonpanel.v1.proto"
+name = "ni.panels.v1.proto"
 version = "0.1.0"
 license = "MIT"
-description = "Protobuf generated code for the ni.pythonpanel.v1 gRPC API"
+description = "Protobuf generated code for the ni.panels.v1 gRPC API"
 authors = ["NI <opensource@ni.com>"]
 maintainers = [
   "Brad Keryan <brad.keryan@emerson.com>",
@@ -10,7 +10,7 @@ maintainers = [
 ]
 readme = "README.md"
 repository = "https://github.com/ni/ni-apis-python"
-keywords = ["ni-apis", "protobuf", "pythonpanel"]
+keywords = ["ni-apis", "protobuf", "panels"]
 classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers",
